--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -54,6 +54,13 @@
     "saturday": "星期六",
 
     "__comments-2": "HomePage",
+    "home": "家",
+    "My open pull requests": "我的公开拉取请求",
+    "A repository contains all of your project's files, revision history, and collaborator discussion.": "仓库包含项目的所有文件、修订历史记录和协作者讨论。",
+    "Follow this exercise to try the GitHub flow": "按照此练习尝试 GitHub 流程",
+    "Trending repositories": "热门存储库",
+    "Top repositories": "最受欢迎的仓库",
+    "Your GitHub Copilot setup is incomplete. Please go to your settings page and complete your setup.": "您的 GitHub Copilot 设置不完整。请前往设置页面完成设置。",
     "sign in": "登录",
     "sign up": "注册",
     "team": "团队",
@@ -312,7 +319,21 @@
     "discussions are not enabled for this repo": "此仓库未启用讨论功能",
     "security alerts": "安全警报",
     "apply": "应用",
-
+    "Code frequency": "代码频率",
+    "Pulse": "脉冲",
+    "Community Standards": "社区标准",
+    "Network graph": "网络图",
+    "Network": "网络图",
+    "Actions Usage Metrics": "操作使用情况指标",
+    "Actions Performance Metrics": "操作性能指标",
+    "This project has not set up a SECURITY.md file yet.": "此项目尚未设置 SECURITY.md 文件。",
+    "suggest a policy": "提出政策建议",
+    "There aren’t any published security advisories": "尚未发布任何安全公告",
+    "Management": "管理",
+    "Manually run by": "手动运行者",
+    "wiki": "百科",
+    "wiki": "百科",
+    "wiki": "百科",
     "fork": "复刻",
     "unfork": "取消复刻",
     "new": "新建",
